# frags

./: Dev.hs  README.md  Test.hs  TestDSL.hs  Yoko.hs  cabal.freeze  cabal.project  frag.cabal  stack.yaml
doc/: BLOG1.md
doc-drafts/: ANNOUNCE.md  BLOG1.md  Summary.md  ghc-internals.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTORS.md  DEVELOPING.md  README.md  ghc-internals.md
examples-motley/: LICENSE  examples-motley.cabal
examples-motley/app/: Main-eff.hs
frag/: CHANGELOG.md  frag.cabal
frag/src/Data/: Frag.hs
frag/src/Data/Frag/: Plugin.hs
frag/src/Data/Frag/Plugin/: Apartness.hs  Class.hs  DetCmpType.hs  Equivalence.hs  Evidence.hs  Frag.hs  Fsk.hs  GHCType.hs  InertSet.hs  Lookups.hs  Parse.hs  Types.hs
frag/src/Data/Frag/Plugin/Equivalence/: FragEQNil.hs
frag/src/Data/Frag/Plugin/GHCType/: Evidence.hs  Parse.hs
frag/src/Data/Frag/Simpl/: Apartness.hs  Class.hs  Equivalence.hs  Frag.hs  InertSet.hs  TestType.hs  Types.hs
frag/src/Data/Frag/Simpl/Equivalence/: FragEQNil.hs  NilNil.hs
frag/src/Test/Data/: Frag.hs
frag/test/: Main.hs
frag/tests/aux/: FragTest.hs  FragTest25.hs  FragTest_SmallProdSig.hs
frag/tests/ill-typed/: T0.hs  T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
frag/tests/well-typed/: T0.hs  T1.hs  T10.hs  T12.hs  T13.hs  T14.hs  T15.hs  T16.hs  T17.hs  T18.hs  T19.hs  T2.hs  T20.hs  T21.hs  T22.hs  T23.hs  T24.hs  T25.hs  T26.hs  T27.hs  T28.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs  T8.hs  T9.hs
motley/: motley.cabal
motley/src/Data/: Implic.hs  Motley.hs
motley/src/Data/Functor/: At.hs  Fun.hs  HO.hs
motley/src/Data/Functor/Arity1ToHask/: Classes.hs
motley/src/Data/Motley/: Place.hs  Row.hs
motley/src/Data/Motley/GHC/: Generics.hs
motley/src/Data/Motley/Row/: Issue19.hs
motley/test/: AuxMTLState.hs  test-GHC-Generics.hs  test-Motley.hs  test-Route.hs  test-Row-Issue19.hs  test-Row.hs  test-Yoko.hs  test-mtl-State.hs
src/Data/: Frag.hs
src/Data/Frag/: Plugin.hs
src/Data/Frag/Plugin/: Apartness.hs  Class.hs  Equivalence.hs  Frag.hs  GHCType.hs  InertSet.hs  Lookups.hs  TestType.hs  Types.hs
src/Data/Frag/Plugin/Equivalence/: NilNil.hs
src/Data/Frag/Plugin/GHCType/: DetCmpType.hs  Evidence.hs  Fsk.hs  Parse.hs
src/Test/Data/: Frag.hs
test/: frag.hs
