cabal-version: >= 1.10

name: frag
version: 0.1.0
maintainer: nicolas.frisby@gmail.com
synopsis: a typechecker plugin and for free abelian group extensions
description: a data kind for free abelian group extensions and a typechecker plugin that grants its equational theory
license: BSD3

category: Plugins

build-type: Simple

library
  default-language: Haskell98
  hs-source-dirs:
    src
  exposed-modules:
    Data.Frag
    Data.Frag.Plugin
    Data.Frag.Plugin.DetCmpType
    Data.Frag.Plugin.Evidence
    Data.Frag.Plugin.Fsk
    Data.Frag.Plugin.GHCType
    Data.Frag.Plugin.Lookups
    Data.Frag.Plugin.Parse
    Data.Frag.Simpl.Apartness
    Data.Frag.Simpl.Class
    Data.Frag.Simpl.Equivalence
    Data.Frag.Simpl.Equivalence.FragEQNil
    Data.Frag.Simpl.Equivalence.NilNil
    Data.Frag.Simpl.Frag
    Data.Frag.Simpl.InertSet
    Data.Frag.Simpl.TestType
    Data.Frag.Simpl.Types

    Test.Data.Frag

  build-depends:
      base

    , containers
    , ghc
    , ghc-tcplugins-extra
    , transformers

    , ghc
    , ghc-paths
    , tasty
    , tasty-hunit
    , tasty-quickcheck

  ghc-options:
    -Wall
    -Werror
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns

test-suite test-frag
  type: exitcode-stdio-1.0
  default-language: Haskell98
  hs-source-dirs:
    test
  main-is: frag.hs

  build-depends:
      base

    , frag

test-suite test-frag-Main
  type: exitcode-stdio-1.0
  default-language: Haskell98
  hs-source-dirs:
    test
  main-is: Main.hs

  build-depends:
      base

    , frag

    , containers
    , directory
    , filepath
    , ghc
    , ghc-boot-th
    , ghc-paths
