cabal-version: >= 1.10

name: frag
version: 0.1.0
author: nicolas.frisby@gmail.com
maintainer: nicolas.frisby@gmail.com
stability: experimental
license: BSD3
license-file: LICENSE

synopsis: Type-level signed multisets (+ typechecker plugin)

description:
  @Data.Frag.Frag k@ is a data kind for type-level multisets over @k@
  in which element multiplicities can be negative.
  .
  With the @SetFrag@ constraint,
  these behave like /row/ types
  in which each component's type is also its label.
  .
  @Data.Frag.Plugin@ defines a typechecker plugin
  that provides the equational theory
  and more,
  so /frag polymorhism/ and inference work as expected.
  .
  The @motley@ package is a primary use case;
  its Haddock documentation shows frags in action.

homepage: https://github.com/nfrisby/frags
bug-reports: https://github.com/nfrisby/frags/issues

category:
    Constraints
  ,
    Plugins
  ,
    Polymorphism
  ,
    Type System

build-type: Simple

library
  default-language: Haskell98
  hs-source-dirs:
    src
  exposed-modules:
    Data.Frag
    Data.Frag.Plugin
    Data.Frag.Plugin.DetCmpType
    Data.Frag.Plugin.Evidence
    Data.Frag.Plugin.Fsk
    Data.Frag.Plugin.GHCType
    Data.Frag.Plugin.Lookups
    Data.Frag.Plugin.Parse
    Data.Frag.Simpl.Apartness
    Data.Frag.Simpl.Class
    Data.Frag.Simpl.Equivalence
    Data.Frag.Simpl.Equivalence.FragEQNil
    Data.Frag.Simpl.Equivalence.NilNil
    Data.Frag.Simpl.Frag
    Data.Frag.Simpl.InertSet
    Data.Frag.Simpl.TestType
    Data.Frag.Simpl.Types

    Test.Data.Frag

  build-depends:
      base

    , containers
    , ghc
    , ghc-tcplugins-extra
    , transformers

    , ghc
    , ghc-paths
    , tasty
    , tasty-hunit
    , tasty-quickcheck

  ghc-options:
    -Wall
    -Werror
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns

test-suite test-frag
  type: exitcode-stdio-1.0
  default-language: Haskell98
  hs-source-dirs:
    test
  main-is: frag.hs

  build-depends:
      base

    , frag

test-suite test-frag-Main
  type: exitcode-stdio-1.0
  default-language: Haskell98
  hs-source-dirs:
    test
  main-is: Main.hs

  build-depends:
      base

    , frag

    , containers
    , directory
    , filepath
    , ghc
    , ghc-boot-th
    , ghc-paths
